--- a/Mission2Assignment/wwwroot/index.html
+++ b/Mission2Assignment/wwwroot/index.html
@@ -57,7 +57,7 @@
             <button id="grade" type="submit">Calculate</button>
         </form>
     </content>
-
+<!--Scripts for bootstrap and my own js-->
 <script src="lib/bootstrap/bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
 <script src="lib/jquery/jquery-3.6.0.min.js"></script>
 <script src="js/calculator.js"></script>
